--- a/app/src/main/res/layout/peliinfo_layout.xml
+++ b/app/src/main/res/layout/peliinfo_layout.xml
@@ -14,7 +14,8 @@
         android:gravity="center|center_vertical"
         android:orientation="vertical"
         tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp">
+        tools:layout_editor_absoluteY="1dp"
+        tools:ignore="MissingConstraints">
 
         <LinearLayout
             android:layout_width="match_parent"
