--- a/app/src/main/res/layout/perfil.xml
+++ b/app/src/main/res/layout/perfil.xml
@@ -12,6 +12,18 @@
         android:orientation="vertical">
 
         <!-- La foto de perfil redonda se colocará en la esquina superior derecha -->
+        <Button
+            android:id="@+id/guardar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Button" />
+
+        <Button
+            android:id="@+id/traer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Button" />
+
         <Space
             android:layout_width="match_parent"
             android:layout_height="36dp" />
@@ -27,13 +39,21 @@
                 android:gravity="left"
                 android:orientation="vertical">
 
-                <TextView
+                <EditText
                     android:id="@+id/first_name2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="20dp"
                     android:text="Nombre del Usuario"
+                    android:textSize="20sp" />
+                <EditText
+                    android:id="@+id/pasword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="20dp"
+                    android:text="contraseña"
                     android:textSize="20sp" />
 
                 <TextView
@@ -44,6 +64,15 @@
                     android:layout_marginTop="5dp"
                     android:gravity="center"
                     android:text="Apellido del Usuario"
+                    android:textSize="16sp" />
+                <TextView
+                    android:id="@+id/contraseña"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center"
+                    android:text="contraseña"
                     android:textSize="16sp" />
             </LinearLayout>
 
@@ -70,4 +99,5 @@
             android:layout_marginTop="20dp" />
 
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
