--- a/app/src/main/res/layout/info_peliculas.xml
+++ b/app/src/main/res/layout/info_peliculas.xml
@@ -136,7 +136,7 @@
     </LinearLayout>
 
     <FrameLayout
-        android:id="@+id/framelayout2"
+        android:id="@+id/framelayoutFloatingB"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
