--- a/app/src/main/res/drawable/circulo.xml
+++ b/app/src/main/res/drawable/circulo.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <shape xmlns:android="http://schemas.android.com/apk/res/android"
-        android:shape="oval">
-        <solid android:color="#00000000" />
-        <stroke android:color="#000000" android:width="2dp" />
-    </shape>
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+    <solid android:color="#000000"/>
+    <stroke android:width="4dp"
+        android:color="#FFFFFF"/>
+
+    <corners android:radius="30px"/>
+</shape>
