--- a/app/src/main/res/layout/info_peliculas.xml
+++ b/app/src/main/res/layout/info_peliculas.xml
@@ -55,6 +55,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/roboto_condensed_bold"
                         android:text="TextView"
+                        android:textColor="#FFFFFF"
                         android:textSize="40dp" />
 
                     <LinearLayout
@@ -68,6 +69,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/roboto_condensed_bold"
                             android:text="TextView"
+                            android:textColor="#FFFFFF"
                             android:textSize="25dp" />
 
                         <ImageView
@@ -89,6 +91,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/roboto_condensed_bold"
                             android:text="TextView"
+                            android:textColor="#FFFFFF"
                             android:textSize="25dp" />
 
                     </LinearLayout>
@@ -98,7 +101,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/roboto_condensed_bold"
-                        android:text="TextView" />
+                        android:text="TextView"
+                        android:textColor="#FFFFFF" />
 
                     <Space
                         android:layout_width="match_parent"
@@ -111,7 +115,7 @@
                         android:layout_gravity="center"
                         android:layout_marginBottom="96dp"
                         android:clickable="true"
-                        app:backgroundTint="#919090"
+                        app:backgroundTint="#D60000"
                         app:rippleColor="#ECE8E8"
                         app:srcCompat="@drawable/mas" />
 
