--- a/app/src/main/res/layout/perfil.xml
+++ b/app/src/main/res/layout/perfil.xml
@@ -7,6 +7,7 @@
     android:background="#000000">
 
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -24,41 +25,42 @@
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="left"
-                android:orientation="vertical">
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="15dp">
 
                 <TextView
                     android:id="@+id/gmailtxv"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginTop="5dp"
-                    android:gravity="center"
-                    android:text="gmail"
-                    android:textSize="16sp" />
-
-                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="5dp"
-                    android:gravity="center"
-                    android:text="logeado"
-                    android:textSize="16sp" />
+                    android:fontFamily="@font/roboto_condensed_bold"
+                    android:gravity="center|center_horizontal|center_vertical"
+                    android:text="gmail"
+                    android:textColor="#FFFFFF"
+                    android:textSize="20sp" />
 
-                <Space
+                <TextView
+                    android:id="@+id/logueado"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="5dp"
+                    android:fontFamily="@font/roboto_condensed_bold"
+                    android:gravity="center|center_horizontal|center_vertical"
+                    android:text="Logueado"
+                    android:textColor="#FFFFFF"
+                    android:textSize="20sp" />
+
             </LinearLayout>
 
             <ImageView
                 android:id="@+id/profile_image"
-                android:layout_width="30dp"
-                android:layout_height="80dp"
+                android:layout_width="70dp"
+                android:layout_height="117dp"
                 android:layout_weight="1"
                 android:background="@drawable/circulo"
-                android:backgroundTint="@color/semi_transparent_gray"
                 android:padding="2dp"
                 android:paddingLeft="20dp"
                 android:src="@drawable/iconoperfil" />
@@ -66,10 +68,86 @@
 
         </LinearLayout>
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/amigos"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="#000000"
+                        android:fontFamily="@font/roboto_condensed_bold"
+                        android:text="AMIGOS"
+                        android:textColor="#FFFFFF"
+                        android:textSize="30dp" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/listas"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="#000000"
+                        android:fontFamily="@font/roboto_condensed_bold"
+                        android:text="MIS  VALORACIONES"
+                        android:textColor="#FFFFFF"
+                        android:textSize="30dp" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+
+            </LinearLayout>
+        </ScrollView>
+
         <!-- TextViews para mostrar el nombre y apellido del usuario -->
 
         <!-- RecyclerView para mostrar las listas de películas del usuario -->
 
     </LinearLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingAjustes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="80dp"
+        android:clickable="true"
+        app:backgroundTint="#FF0F0F"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/baseline_settings_24" />
+
+    <FrameLayout
+        android:id="@+id/framelayoutajustes"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <include
+            layout="@layout/ajustes"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
