--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="semi_transparent_gray">#80202020</color>
     <color name="semi_transparent_white">#80FFFFFF</color>
+    <color name="black_semi_transparent">#CC000000</color>
+    <color name="blue_semi_transparent">#800000FF</color>
+    <color name="red_semi_transparent">#80FF0000</color>
 </resources>
