--- a/app/src/main/res/drawable/circulo.xml
+++ b/app/src/main/res/drawable/circulo.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <solid android:color="@color/black_semi_transparent"/>
     <stroke android:width="4dp"
-        android:color="#FFFFFF"/>
+        android:color="@color/white"/>
 
     <corners android:radius="30px"/>
 </shape>
