--- a/app/src/main/res/layout/busqueda_layout.xml
+++ b/app/src/main/res/layout/busqueda_layout.xml
@@ -19,6 +19,9 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/black"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_margin="20dp"
             android:elevation="4dp"
             app:contentInsetEnd="0dp"
             app:contentInsetStart="0dp"
@@ -29,6 +32,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:padding="0dp"
                 android:gravity="center_vertical">
 
                 <EditText
@@ -66,6 +70,7 @@
             android:id="@+id/recycler_busqueda"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:background="#000000"
             android:foregroundTint="#000000" />
 
