--- a/app/src/main/res/layout/perfil.xml
+++ b/app/src/main/res/layout/perfil.xml
@@ -41,36 +41,47 @@
                     android:textColor="#FFFFFF"
                     android:textSize="20sp" />
 
-                <TextView
-                    android:id="@+id/logueado"
-                    android:layout_width="match_parent"
+                <Spinner
+                    android:id="@+id/spinner"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginTop="5dp"
-                    android:fontFamily="@font/roboto_condensed_bold"
-                    android:gravity="center|center_horizontal|center_vertical"
-                    android:text="Logueado"
-                    android:textColor="#FFFFFF"
-                    android:textSize="20sp" />
+                    android:entries="@array/opciones_spinner"
+                    android:gravity="center"
+                    android:padding="0dp"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="10dp"
+                    android:paddingEnd="10dp"
+                    android:prompt="@string/selecciona_opcion"
+                    android:scrollbarSize="6dp" />
 
             </LinearLayout>
 
-            <ImageView
-                android:id="@+id/profile_image"
-                android:layout_width="70dp"
-                android:layout_height="117dp"
-                android:layout_weight="1"
-                android:background="@drawable/circulo"
-                android:padding="2dp"
-                android:paddingLeft="20dp"
-                android:src="@drawable/iconoperfil" />
+            <androidx.cardview.widget.CardView
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_gravity="center"
+                android:layout_margin="8dp"
+                app:cardCornerRadius="40dp">
 
+                <ImageView
+                    android:id="@+id/profile_image"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_weight="1"
+                    android:clipToOutline="true"
+                    android:foreground="@drawable/circulin"
+                    android:padding="2dp"
+                    android:paddingLeft="20dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/iconoperfil" />
+            </androidx.cardview.widget.CardView>
 
         </LinearLayout>
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:padding="15dp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
