--- a/app/src/main/res/layout/info_peliculas.xml
+++ b/app/src/main/res/layout/info_peliculas.xml
@@ -127,6 +127,12 @@
                         android:text="RECOMENDACIONES"
                         android:textSize="30dp" />
 
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                    </FrameLayout>
+
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rv_recomendaciones"
                         android:layout_width="wrap_content"
@@ -142,7 +148,8 @@
     <FrameLayout
         android:id="@+id/framelayoutFloatingB"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="invisible">
 
         <include
             layout="@layout/floating_menu"
