--- a/app/src/main/res/layout/info_peliculas.xml
+++ b/app/src/main/res/layout/info_peliculas.xml
@@ -47,13 +47,15 @@
                         android:id="@+id/FotoPosterInfo"
                         android:layout_width="match_parent"
                         android:layout_height="400dp"
-                        app:srcCompat="@drawable/ic_launcher_foreground" />
+                        app:srcCompat="@drawable/iconopalomitas" />
 
                     <TextView
                         android:id="@+id/nombrepeli"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/roboto_condensed_bold"
+                        android:gravity="center|center_horizontal"
+                        android:padding="10dp"
                         android:text="TextView"
                         android:textColor="#FFFFFF"
                         android:textSize="40dp" />
@@ -61,12 +63,15 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:gravity="center|center_horizontal"
                         android:orientation="horizontal">
 
                         <TextView
                             android:id="@+id/valoracionpeli"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginStart="15dp"
                             android:fontFamily="@font/roboto_condensed_bold"
                             android:text="TextView"
                             android:textColor="#FFFFFF"
@@ -74,9 +79,9 @@
 
                         <ImageView
                             android:id="@+id/imageView2"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal|center_vertical"
+                            android:layout_gravity="center"
                             android:layout_weight="1"
                             app:srcCompat="@drawable/star" />
 
@@ -89,6 +94,7 @@
                             android:id="@+id/fechasalidapeli"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_gravity="center"
                             android:fontFamily="@font/roboto_condensed_bold"
                             android:text="TextView"
                             android:textColor="#FFFFFF"
@@ -101,8 +107,64 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/roboto_condensed_bold"
+                        android:padding="10dp"
                         android:text="TextView"
                         android:textColor="#FFFFFF" />
+
+                    <Space
+                        android:layout_width="match_parent"
+                        android:layout_height="11dp" />
+
+                    <TextView
+                        android:id="@+id/valoralatxt"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/roboto_condensed_bold"
+                        android:text="VALORALA TU MISMO"
+                        android:textColor="#FFFFFF"
+                        android:textSize="20dp" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal"
+                        android:paddingTop="20dp">
+
+                        <ImageView
+                            android:id="@+id/estrella1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            app:srcCompat="@drawable/baseline_star_vacia" />
+
+                        <ImageView
+                            android:id="@+id/estrella2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            app:srcCompat="@drawable/baseline_star_vacia" />
+
+                        <ImageView
+                            android:id="@+id/estrella3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            app:srcCompat="@drawable/baseline_star_vacia" />
+
+                        <ImageView
+                            android:id="@+id/estrella4"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            app:srcCompat="@drawable/baseline_star_vacia" />
+
+                        <ImageView
+                            android:id="@+id/estrella5"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            app:srcCompat="@drawable/baseline_star_vacia" />
+                    </LinearLayout>
 
                     <Space
                         android:layout_width="260dp"
@@ -125,6 +187,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/roboto_condensed_bold"
                         android:text="RECOMENDACIONES"
+                        android:textColor="#FFFFFF"
                         android:textSize="30dp" />
 
                     <FrameLayout
