--- a/app/src/main/res/layout/listas_layout.xml
+++ b/app/src/main/res/layout/listas_layout.xml
@@ -83,11 +83,13 @@
     <FrameLayout
         android:id="@+id/framelayouteliminar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="invisible">
 
         <include
             layout="@layout/framelayouteliminar"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </FrameLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
