--- a/app/src/main/res/layout/inicio_layout.xml
+++ b/app/src/main/res/layout/inicio_layout.xml
@@ -34,6 +34,7 @@
                     android:textColor="#FFFFFF"
                     android:textSize="40dp" />
 
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -43,6 +44,43 @@
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/RV_films"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="left"
+                        android:orientation="horizontal"
+                        tools:ignore="MissingConstraints" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+
+
+                <FrameLayout
+                    android:id="@+id/framelayoutGeneros"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                <include
+                    layout="@layout/generosscroll"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+                </FrameLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/generosrv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="left"
